# sxh-soloCoder-1276

./: pyproject.toml  weekly-report-2026-06-08-to-2026-06-14.json  weekly-report-2026-06-08-to-2026-06-14.md
taskflow/: cli.py  config.py
taskflow/db/: database.py  models.py
taskflow/features/: __init__.py  nlp_parser.py  pomodoro.py  reminder.py  search.py  sync.py  themes.py  weekly_report.py
taskflow/tui/: app.py
